# vscode-try-pybind11

./: .clang-format  .gitignore  CMakeLists.txt  README.md  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-publish.yml
bindings/: CMakeLists.txt  example.cpp  py_animal.hpp  py_dog.hpp  try_pypind11_olned.cpp
include/: arithmetic.hpp
include/parser/: parser.hpp
include/pet/: animal.hpp  dog.hpp
src/: example.cpp
src/pet/: animal.cpp  dog.cpp
tests/: arithmetic_test.cpp  parser_test.cpp  pet_test.cpp  test.py
